# pico-sdk-vsc-dev-example

./: .clang-format  .gitmodules  LICENSE  README.md  build.sh
pshell/: CMakeLists.txt  main.c
pshell/lib/pshell/: CMakeLists.txt
pshell/lib/pshell/inc/: pshell.h
pshell/lib/pshell/src/: pshell.c  pshell_std_input.c
pshell/pshell_example/: CMakeLists.txt
pshell/pshell_example/inc/: pshell_example.h
pshell/pshell_example/src/: pshell_example_cmd.c
